--- a/config.json
+++ b/config.json
@@ -69,6 +69,40 @@
           "pt1": { "x": 200, "y": 250 },
           "pt2": { "x": 300, "y": 300 },
           "targetImage": "7.png"
+        },
+        {
+      "id": 3,
+      "file": "3.png",
+      "zones": [
+        {
+          "pt1": { "x": 800, "y": 10 },
+          "pt2": { "x": 1000, "y": 200 },
+          "targetImage": "1.png"
+        },
+        {
+          "pt1": { "x": 200, "y": 50 },
+          "pt2": { "x": 300, "y": 100 },
+          "targetImage": "3.png"
+        },
+        {
+          "pt1": { "x": 50, "y": 150 },
+          "pt2": { "x": 150, "y": 200 },
+          "targetImage": "4.png"
+        },
+        {
+          "pt1": { "x": 200, "y": 150 },
+          "pt2": { "x": 300, "y": 200 },
+          "targetImage": "5.png"
+        },
+        {
+          "pt1": { "x": 50, "y": 250 },
+          "pt2": { "x": 150, "y": 300 },
+          "targetImage": "6.png"
+        },
+        {
+          "pt1": { "x": 200, "y": 250 },
+          "pt2": { "x": 300, "y": 300 },
+          "targetImage": "7.png"
         }
       ]
     }
